# aria

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
.claude/: settings.local.json
config/: features.yaml  security_profiles.yaml  self_healing.yaml  settings.yaml  skills.yaml
config/workflows/: bug_fix.yaml  feature_dev.yaml
docker/: Dockerfile  Dockerfile.sandbox  docker-compose.yaml
docs/: OPERATOR_GUIDE.md
src/: __init__.py  main.py
src/channels/: __init__.py  base.py  slack.py  websocket.py  whatsapp.py
src/cli/: __init__.py  ascii_art.py  config_writer.py  detection.py  hardware.py  styles.py  wizard.py
src/cli/steps/: __init__.py  browser.py  channels.py  dashboard.py  environment.py  integrations.py  llm.py  security.py  skills.py
src/core/: __init__.py  agent_coordinator.py  agents.py  agents_builtin.py  config_watcher.py  context_efficiency.py  context_manager.py  daemon.py  device_pairing.py  events.py  heartbeat.py  llm_router.py  message_router.py  orchestrator.py  proactive.py  process_manager.py  scheduler.py  self_healing.py  task_decomposer.py  usage_tracker.py  workflow_engine.py  workflow_named.py  workspace.py  workspace_bootstrap.py
src/features/: __init__.py  registry.py
src/integrations/: __init__.py  onecontext.py
src/memory/: __init__.py  cognee_graph.py  episodic.py  long_term.py  rag.py  short_term.py  user_profile.py  vector_store.py
src/plugins/: __init__.py  base.py  loader.py
src/plugins/builtin/: __init__.py
src/processing/: __init__.py  entity_extractor.py  link_extractor.py  media_processor.py  personality.py  sentiment.py  summarizer.py
src/security/: __init__.py  audit.py  guardian.py  profiles.py  sandbox.py
src/skills/: __init__.py  base.py  generator.py  registry.py
src/skills/builtin/: __init__.py  agent.py  agent_skill.py  browser.py  calendar.py  camera.py  contacts.py  context_skill.py  documents.py  email.py  filesystem.py  finance.py  home.py  image.py  linear.py  memory.py  memory_skill.py  news.py  notion.py  research.py  shell.py  sms.py  spotify.py  stt.py  todoist.py  tracking.py  tts.py  video.py  voice_call.py  weather.py  webhook.py  workflow.py
src/utils/: __init__.py  config.py  crypto.py  logging.py  model_lists.py  request_context.py
src/web/: __init__.py  api.py  websocket.py
src/web/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/web/frontend/public/: manifest.json  sw.js
src/web/frontend/src/: App.tsx  main.tsx
src/web/frontend/src/components/: Approvals.tsx  Chat.tsx  Layout.tsx  Login.tsx  Logs.tsx  Onboarding.tsx  Settings.tsx  Skills.tsx
src/web/frontend/src/contexts/: ThemeContext.tsx
src/web/frontend/src/hooks/: useAuth.ts  useKeyboardShortcuts.ts
src/web/frontend/src/pages/: Dashboard.tsx
src/web/frontend/src/services/: api.ts
src/web/frontend/src/styles/: index.css
tests/: __init__.py  test_context_efficiency.py  test_workspace.py
whatsapp-bridge/: Dockerfile  index.js  package-lock.json  package.json
